quito el justofy

--- a/src/app/educacion/educacion.component.html
+++ b/src/app/educacion/educacion.component.html
@@ -1,4 +1,4 @@
-<div class="flex-col min-h-screen bg-gradient-to-b from-gray-950 via-gray-900 to-gray-950 text-justify">
+<div class="flex-col min-h-screen bg-gradient-to-b from-gray-950 via-gray-900 to-gray-950">
   <article
     class="font-fira mx-auto max-w-5xl p-4 sm:p-6 lg:p-8 selection:bg-black text-gray-200 selection:text-white flex-grow"
   >
